--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hellow world</h1>
     <h1>Hello i am addin another feature to my app here</h1>
+    <h1>Here, i have added a new feature to this app. And it is added from the feature branch.</h1>
 </body>
 </html>
